--- a/templates/usr/local/sbin/borgbackup-create.sh.j2
+++ b/templates/usr/local/sbin/borgbackup-create.sh.j2
@@ -34,6 +34,9 @@ echo -e "\n\nEXECUTING BACKUP" >> /var/log/borgbackup/${current_date}.log
     --exclude /var/lib/postgresql \
     --exclude /var/lib/libvirt/images \
     --exclude /home/borgbackup/archives \
+{% for borgbackup_client_exclude_path in borgbackup_client_exclude_paths %}
+    --exclude {{ borgbackup_client_exclude_path }} \
+{% endfor %}
     --exclude "*.journal" \
     --exclude "*.fsck" \
     --exclude "*.lost+found" \
