--- a/templates/usr/local/sbin/borgbackup-create.sh.j2
+++ b/templates/usr/local/sbin/borgbackup-create.sh.j2
@@ -67,5 +67,9 @@ fi
 
 # send message to monitoring if there is a problem
 if [[ "$borg_backup_exit_status" != "0" ]] || [[ "$borg_hook_general_exit_status" != "0" ]]; then
+    echo "Error running borg backup!"
+    echo "borg_backup_exit_status $borg_backup_exit_status"
+    echo "borg_hook_general_exit_status $borg_hook_general_exit_status"
+    echo
     cat $logfile
 fi
