added /run to exclude paths

--- a/templates/usr/local/sbin/borgbackup-create.sh.j2
+++ b/templates/usr/local/sbin/borgbackup-create.sh.j2
@@ -42,6 +42,7 @@ borg create \
     --exclude /tmp \
     --exclude /proc \
     --exclude /sys \
+    --exclude /run \
     --exclude /var/lib/mysql \
     --exclude /var/lib/postgresql \
     --exclude /var/lib/libvirt/images \
