--- a/templates/usr/local/sbin/borgbackup-create.sh.j2
+++ b/templates/usr/local/sbin/borgbackup-create.sh.j2
@@ -45,6 +45,7 @@ borg create \
     --exclude /run \
     --exclude /var/lib/mysql \
     --exclude /var/lib/postgresql \
+    --exclude /var/lib/docker \
     --exclude /var/lib/libvirt/images \
     --exclude /home/borgbackup/archives \
 {% for borgbackup_client_exclude_path in borgbackup_client_exclude_paths %}
