--- a/templates/usr/local/sbin/borgbackup-create.sh.j2
+++ b/templates/usr/local/sbin/borgbackup-create.sh.j2
@@ -43,7 +43,13 @@ borg create \
     --exclude /proc \
     --exclude /sys \
     --exclude /run \
-    --exclude /var/lib/ \
+    --exclude /var/lib/mysql \
+    --exclude /var/lib/postgresql \
+    --exclude /var/lib/elasticsearch \
+    --exclude /var/lib/docker \
+    --exclude /var/lib/libvirt/images \
+    --exclude /home/borgbackup/archives \
+    --exclude /var/lib/prometheus-server/data/wal \
 {% for borgbackup_client_exclude_path in borgbackup_client_exclude_paths %}
     --exclude {{ borgbackup_client_exclude_path }} \
 {% endfor %}
