exclude /var/lib/redis

--- a/templates/usr/local/sbin/borgbackup-create.sh.j2
+++ b/templates/usr/local/sbin/borgbackup-create.sh.j2
@@ -47,6 +47,7 @@ borg create \
     --exclude /var/lib/postgresql \
     --exclude /var/lib/elasticsearch \
     --exclude /var/lib/docker \
+    --exclude /var/lib/redis \
     --exclude /var/lib/libvirt/images \
     --exclude /home/borgbackup/archives \
     --exclude /var/lib/prometheus-server/data/wal \
