added large sparse file

--- a/templates/usr/local/sbin/borgbackup-create.sh.j2
+++ b/templates/usr/local/sbin/borgbackup-create.sh.j2
@@ -43,6 +43,7 @@ borg create \
     --exclude /proc \
     --exclude /sys \
     --exclude /run \
+    --exclude /var/log/lastlog \
     --exclude /var/lib/mysql \
     --exclude /var/lib/postgresql \
     --exclude /var/lib/elasticsearch \
